[package]
name = "concurrency"
version = "0.1.0"
authors = ["Ji Qin"]
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.83"
dashmap = "5.5.3"
oneshot = "0.1.6"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt", "net", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
